Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.029 devel

**    Add split_var metacomment to assist UNOPTFLAT fixes, #2066. [Yutetsu TAKATSUKASA]

**    Add support for $dumpfile and $dumpvars, #2126. [Alexander Grobman]

***   Add +verilator+noassert flag to disable assertion checking. [Tobias Wölfel]

***   Add check for assertOn for asserts, #2162. [Tobias Wölfel]

***   Fix genblk naming with directly nested generate blocks, #2176. [Alexander Grobman]

****  Implement $displayb/o/h, $writeb/o/h, etc, #1637.

****  Use gcc -Os in examples instead of -O2 for better average performance.

****  Fix undeclared VL_SHIFTR_WWQ, #2114. [Alex Solomatnikov]


* Verilator 4.028 2020-02-08

**    Support attributes (public, isolate_assignments, etc.) in configuration files.

**    Add -match to lint_off to waive warnings. [Philipp Wagner]

***   Link Verilator binary partially statically, #2146. [Geza Lore]

***   Verilation speed improvements, #2133, #2138. [Geza Lore]

***   Support libgoogle-perftools-dev's libtcmalloc if available, #2137. [Geza Lore]

***   Support $readmem/$writemem with assoc arrarys, #2100. [agrobman]

****  Support type(expression) operator and $typename, #1650.

****  Support left justified $display, #2101. [Pieter Kapsenberg]

****  Support string character access via indexing.

****  Support enum.next(k) with constant k > 1, #2125. [Tobias Rosenkranz]

****  Support parameter access from arrays of interfaces, #2155. [Todd Strader]

****  Add parameter values in XML. #2110. [Pieter Kapsenberg]

****  Add loc column location in XML (replaces fl), #2122. [Pieter Kapsenberg]

****  Add error on misused define. [Topa Tota]

****  Add parameter to set maximum signal width, #2082. [Øyvind Harboe]

****  Add warning on genvar in normal for loop, #2143. [yurivict]

****  Fix VPI scope naming for public modules. [Nandu Raj]

****  Fix FST tracing of enums inside structs. [fsiegle]
